--- a/case-studies/appraisal-connector/index.html
+++ b/case-studies/appraisal-connector/index.html
@@ -10,7 +10,7 @@ casestudyid: 3
     <h1 class="lowercase underline-orange">Appraisal Connector</h1>
     {% include crumbs.html %}
     <div class="case-study-intro max-1000">
-      <p>Interlead chose Media Suite to develop the software behind Appraisal Connector&trade; - its online appraisal system designed to enhance the professional learning of New Zealand teachers.</p>
+      <p>Interlead chose Media Suite to develop the software behind Appraisal Connector&trade; - an online appraisal system designed to enhance the <span class="fancy-pants-font">professional learning</span> of New Zealand teachers.</p>
     </div>
 
     <div class="case-study-icons">
@@ -28,23 +28,23 @@ casestudyid: 3
     <img src="{{ "/img/case-studies/interlead-1.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
     <div class="max-1000 align-left space-below-please">
-      <h2 class="lowercase">The Problem</h2>
-      <p>After years of educational research and following guidelines established by the New Zealand Ministry of Education, InterLEAD consultants developed the philosophy and ideas behind the Appraisal Connector&trade;.</p>
-      <p class="space-below-please">Media Suite were able to capture that philosophy and develop an intuitive web interface that streamlines the review process, allowing teachers and schools to focus on continued professional development.</p>
+      <h2 class="lowercase">The Challenge</h2>
+      <p>After years of <span class="fancy-pants-font">educational research</span> and following guidelines established by the New Zealand Ministry of Education, InterLEAD consultants developed the philosophy and ideas behind the Appraisal Connector&trade;.</p>
+      <p class="space-below-please">Media Suite were able to capture that philosophy and develop an <span class="fancy-pants-font">intuitive web interface</span> that streamlines the review process, allowing teachers and schools to focus on continued professional development.</p>
 
       <img src="{{ "/img/case-studies/interlead-2.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
       <h2 class="lowercase">Core Features</h2>
       <p class="space-below-please">
-        Appraisal Scheduling<br/>
-        Professional Journals &amp; Goal Setting<br/>
-        A Student Feedback Portal<br/>
-        Individual Reporting<br/>
-        School Wide Reporting
+        <span class="fancy-pants-font">Appraisal Scheduling</span><br/>
+        <span class="fancy-pants-font">Professional Journals &amp; Goal Setting</span><br/>
+        <span class="fancy-pants-font">A Student Feedback Portal</span><br/>
+        <span class="fancy-pants-font">Individual Reporting</span><br/>
+        <span class="fancy-pants-font">School Wide Reporting</span>
       </p>
 
-      <p>The initial ‘bootstrap’ system was built very rapidly over a couple of months and used to cost effectively test the market. Features and users were rapidly added over the first year of operation. Now after three years of continuous development (including a near complete rebuild) Appraisal Connector™ offers a compelling set of features.</p>
-      <p>In 2014 we have added a new companion product called Leadership Reflector&trade; - focusing on the feedback of leaders.</p>
+      <p>The initial ‘bootstrap’ system was built very rapidly over a couple of months and used to cost effectively <span class="fancy-pants-font">test the market</span>. Features and users were rapidly added over the first year of operation. Now after three years of <span class="fancy-pants-font">continuous development</span> (including a near complete rebuild) Appraisal Connector™ offers a compelling set of features.</p>
+      <p>In 2014 we added a new companion product called Leadership Reflector&trade; - focusing on the feedback of leaders.</p>
       <p>If you have any questions about this project please contact George Wills on 021 606462.</p>
     </div>
 
