--- a/case-studies/forward-works-viewer/index.html
+++ b/case-studies/forward-works-viewer/index.html
@@ -10,7 +10,7 @@ casestudyid: 2
     <h1 class="lowercase underline-orange">Forward Works Viewer</h1>
     {% include crumbs.html %}
     <div class="case-study-intro max-1000">
-      <p>Media Suite partnered with North South GIS and Jacobs Engineering Group to deliver the Forward Works Viewer as part of The Canterbury Spatial Data Infrastructure projects being developed by Land Information New Zealand.</p>
+      <p>Media Suite partnered with North South GIS and Jacobs Engineering Group to deliver the Forward Works Viewer as part of The <span class="fancy-pants-font">Canterbury Spatial Data Infrastructure</span> projects being developed by Land Information New Zealand.</p>
     </div>
 
     <div class="case-study-icons">
@@ -38,16 +38,18 @@ casestudyid: 2
       <h2 class="lowercase">Core functionality of the viewer includes:</h2>
 
       <p class="space-below-please">
-        Managing projects - via a web interface including the detailing of impacts.<br/>
-        Map viewer - which allows users to view projects in conjunction with relevant contextual data.<br/>
-        Time Slider - a set of controls that allows you to visualise projects and their impacts over time.<br/>
-        Clash detection - Detailing other projects that may clash with yours.<br/>
-        Opportunity detection - Detailing other projects that may present an opportunity for collaboration.<br/>
-        Advanced search - For detailed analysis of projects.<br/>
-        Importing of data - automatically imports and updates data from 3rd party systems.<br/>
-        Exporting of data - via a Web Feature Service (WFS Feed).<br/>
-        What was unique about the delivery was that the Agile methodology Scrum was chosen, adopted and largely driven by the client; LINZ. We believe this was one of the first times a government agency has adopted Scrum so wholeheartedly and built themselves into the process so fully. Everything from the supply agreement to delivery and application support has been centred around Scrum.<br/>
+        <span class="fancy-pants-font">Managing projects</span> - via a web interface including the detailing of impacts.<br/>
+        <span class="fancy-pants-font">Map viewer</span> - which allows users to view projects in conjunction with relevant contextual data.<br/>
+        <span class="fancy-pants-font">Time Slider</span> - a set of controls that allows you to visualise projects and their impacts over time.<br/>
+        <span class="fancy-pants-font">Clash detection</span> - Detailing other projects that may clash with yours.<br/>
+        <span class="fancy-pants-font">Opportunity detection</span> - Detailing other projects that may present an opportunity for collaboration.<br/>
+        <span class="fancy-pants-font">Advanced search</span> - For detailed analysis of projects.<br/>
+        <span class="fancy-pants-font">Importing of data</span> - automatically imports and updates data from 3rd party systems.<br/>
+        <span class="fancy-pants-font">Exporting of data</span> - via a Web Feature Service (WFS Feed).<br/>
       </p>
+
+      <h2>Agile</h2>
+      <p>What was unique about the delivery was that the Agile methodology Scrum was chosen, adopted and largely driven by the client; LINZ. We believe this was one of the first times a government agency has adopted Scrum so wholeheartedly and built themselves into the process so fully. Everything from the supply agreement to delivery and application support has been centred around Scrum.</p>
 
       <p>To read more about the project, visit <a href="http://linz.govt.nz" target="_blank">linz.govt.nz</a></p>
 
