--- a/case-studies/transport-for-christchurch/index.html
+++ b/case-studies/transport-for-christchurch/index.html
@@ -11,7 +11,7 @@ casestudyid: 1
     <h1 class="lowercase underline-orange">Transport for Christchurch</h1>
     {% include crumbs.html %}
     <div class="case-study-intro max-1000">
-      <p>In the wake of the Canterbury earthquakes, Media Suite was engaged by the Christchurch Transport Operations Centre <em>(A joint venture between the New Zealand Transport Authority, Christchurch City Council other local councils)</em> to develop a long-term, web-based communication channel for the travelling public in the greater Christchurch region.</p>
+      <p>In the wake of the <span class="fancy-pants-font">Canterbury earthquakes</span>, Media Suite was engaged by the Christchurch Transport Operations Centre to develop a long-term, <span class="fancy-pants-font">web-based communication channel</span> for the travelling public in the greater Christchurch region.</p>
     </div>
 
     <div class="case-study-icons">
@@ -33,11 +33,11 @@ casestudyid: 1
     </div>
 
     <div class="max-1000 align-left space-below-please">
-      <h2 class="lowercase">The Problem</h2>
+      <h2 class="lowercase">The Challenge</h2>
       <p class="space-below-please">Initially the availability of data was limited to roadworks and road closures however over the last 4 years Media Suite has worked with CTOC to develop strategies and tools for collecting, augmenting and communicating a broad range of traveller information to the public via a range of channels. </p>
       <img src="{{ "/img/case-studies/tfc-2.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
-      <h2 class="lowercase">The Solution</h2>
+      <h2 class="lowercase">Many Solutions</h2>
       <p class="space-below-please">The engagement with CTOC and NZTA has led us to develop tools for coordinating roadworks, broadcasting incidents, publishing to social media, measuring journey times and congestion as well as building APIs to open data to other developers. Many of these tools are now being utilised nationally.</p>
 
     </div>
