added fallback method for SVGs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ ishome: true
     <div id="home-panel-nav">
       <div class="max-1200">
         <div id="home-nav-logo">
-          <img src="{{ "/img/logo-trans-white.svg" | prepend: site.baseurl }}" alt="Media Suite Logo" class="home-logo" />
+          <img src="{{ "/img/logo-trans-white.svg" | prepend: site.baseurl }}" alt="Media Suite Logo" class="home-logo" data-fallback="{{ "/img/logo-trans-white.png" | prepend: site.baseurl }}" />
         </div>
         <a href="#" id="home-menu-trigger" class="menu-trigger lowercase js-menu-trigger" data-no-instant>
           <i class="trigger-icon icon icon-menu"></i>
