--- a/src/people/index.html
+++ b/src/people/index.html
@@ -569,6 +569,102 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
         <h3 class="person-name-hover">Terri</h3>
       </div> <!-- .person-wrap -->
 
+      <!-- Tim -->
+      <div id="person-tim" class="person-wrap js-iso-element" data-coffees="1" data-commits="0">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/no-image-ill.png" | prepend: site.baseurl }}" alt="Tim Bromhead" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Tim Bromhead</h2>
+                  <h3 class="bio-sub">Product Owner</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-tim.jpg" | prepend: site.baseurl }}" alt="Tim Bromhead" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Tim specialises in the iterative process of designing web applications. He has a rare blend of design, technical and people skills which make him an adaptable product owner. Tim is a keen glider pilot who regularly competes in competitions around New Zealand and Australia.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Tim</h3>
+      </div> <!-- .person-wrap -->
+
+      <!-- Ewen -->
+      <div id="person-ewen" class="person-wrap js-iso-element" data-coffees="1" data-commits="3">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/no-image-ill.png" | prepend: site.baseurl }}" alt="Ewen Cumming" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Ewen Cumming</h2>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-ewen.jpg" | prepend: site.baseurl }}" alt="Ewen Cumming" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Ewen has over 12 years experience as a web developer and frontend engineer. He has a background in Systems Engineering and is passionate about technical design, deployment pipelines and mentoring. When he isn’t shipping code or helping his teammates you might find him playing guitar, juggling, brewing beer, tramping or spending time with his young family.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Ewen</h3>
+      </div> <!-- .person-wrap -->
+
+      <!-- Hollingsworth -->
+      <div id="person-hollingsworth" class="person-wrap js-iso-element" data-coffees="1" data-commits="185">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/no-image-ill.png" | prepend: site.baseurl }}" alt="Jonathan Hollingsworth" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Jonathan Hollingsworth</h2>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-hollingsworth.jpg" | prepend: site.baseurl }}" alt="Jonathan Hollingsworth" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Jonathan has over 15 years experience working as a software engineer and then as a project manager on large IT projects with some of the UKs most well known brands. The lure of the NZ lifestyle and a passion to get back into code has brought him to Media Suite to join our Node.js team. Jonathan (aka Hollingsworth) is lucky enough to have settled in Queenstown with his wife and young family where he gets to snowboard in winter and mountain bike in the summer.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Ewen</h3>
+      </div> <!-- .person-wrap -->
+
       <!-- Matisse -->
       <div id="person-matisse" class="person-wrap js-iso-element" data-coffees="0" data-commits="0" data-sleep="22">
         <a href="#" class="person js-show-bio">
