--- a/src/people/index.html
+++ b/src/people/index.html
@@ -212,7 +212,7 @@ menuorder: 4
             </div>
           </div> <!-- .bio-inner -->
         </div> <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Jonathan</h3>
+        <h3 class="person-name-hover">Jonathan P</h3>
       </div> <!-- .person-wrap -->
 
       <!-- Josh -->
@@ -662,7 +662,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
             </div>
           </div> <!-- .bio-inner -->
         </div> <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Ewen</h3>
+        <h3 class="person-name-hover">Jonathan H</h3>
       </div> <!-- .person-wrap -->
 
       <!-- Matisse -->
