People page updates

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -150,6 +150,38 @@ menuorder: 4
         <h3 class="person-name-hover">Ersin</h3>
       </div> <!-- .person-wrap -->
 
+      <!-- Ewen -->
+      <div id="person-ewen" class="person-wrap js-iso-element" data-coffees="1" data-commits="3">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/ewen.png" | prepend: site.baseurl }}" alt="Ewen Cumming" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Ewen Cumming</h2>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-ewen.jpg" | prepend: site.baseurl }}" alt="Ewen Cumming" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Ewen has over 12 years experience as a web developer and frontend engineer. He has a background in Systems Engineering and is passionate about technical design, deployment pipelines and mentoring. When he isn’t shipping code or helping his teammates you might find him playing guitar, juggling, brewing beer, tramping or spending time with his young family.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Ewen</h3>
+      </div> <!-- .person-wrap -->
+
       <!-- George -->
       <div id="person-george" class="person-wrap js-iso-element" data-coffees="2" data-commits="17" data-sleep="0">
         <a href="#" class="person js-show-bio">
@@ -180,6 +212,38 @@ menuorder: 4
           </div> <!-- .bio-inner -->
         </div> <!-- .bio-wrap -->
         <h3 class="person-name-hover">George</h3>
+      </div> <!-- .person-wrap -->
+
+      <!-- Hollingsworth -->
+      <div id="person-hollingsworth" class="person-wrap js-iso-element" data-coffees="1" data-commits="185">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/hollingsworth.png" | prepend: site.baseurl }}" alt="Jonathan Hollingsworth" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Jonathan Hollingsworth</h2>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-hollingsworth.jpg" | prepend: site.baseurl }}" alt="Jonathan Hollingsworth" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Jonathan has over 15 years experience working as a software engineer and then as a project manager on large IT projects with some of the UKs most well known brands. The lure of the NZ lifestyle and a passion to get back into code has brought him to Media Suite to join our Node.js team. Jonathan (aka Hollingsworth) is lucky enough to have settled in Queenstown with his wife and young family where he gets to snowboard in winter and mountain bike in the summer.</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .bio-inner -->
+        </div> <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Jonathan H</h3>
       </div> <!-- .person-wrap -->
 
       <!-- Jonathan -->
@@ -219,7 +283,7 @@ menuorder: 4
       <div id="person-josh" class="person-wrap js-iso-element" data-coffees="2" data-commits="690" data-sleep="1">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/no-image-ill.png" | prepend: site.baseurl }}" alt="Joshua Vial" />
+          <img class="person-image" src="{{ "/img/people/josh.png" | prepend: site.baseurl }}" alt="Joshua Vial" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -573,7 +637,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
       <div id="person-tim" class="person-wrap js-iso-element" data-coffees="1" data-commits="0">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/no-image-ill.png" | prepend: site.baseurl }}" alt="Tim Bromhead" />
+          <img class="person-image" src="{{ "/img/people/tim.png" | prepend: site.baseurl }}" alt="Tim Bromhead" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -599,70 +663,6 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
           </div> <!-- .bio-inner -->
         </div> <!-- .bio-wrap -->
         <h3 class="person-name-hover">Tim</h3>
-      </div> <!-- .person-wrap -->
-
-      <!-- Ewen -->
-      <div id="person-ewen" class="person-wrap js-iso-element" data-coffees="1" data-commits="3">
-        <a href="#" class="person js-show-bio">
-          <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/no-image-ill.png" | prepend: site.baseurl }}" alt="Ewen Cumming" />
-          <span class="burst-wrap scale-in">
-            <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
-            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
-          </span>
-        </a>
-        <div class="bio-wrap">
-          <div class="bio-inner">
-            <div class="faux-table">
-              <div class="faux-table-cell">
-                <div class="bio-head">
-                  <h2 class="bio-heading">Ewen Cumming</h2>
-                  <h3 class="bio-sub">Full Stack Developer</h3>
-                  <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-ewen.jpg" | prepend: site.baseurl }}" alt="Ewen Cumming" />
-                  </div>
-                </div>
-                <div class="bio-body">
-                  <p>Ewen has over 12 years experience as a web developer and frontend engineer. He has a background in Systems Engineering and is passionate about technical design, deployment pipelines and mentoring. When he isn’t shipping code or helping his teammates you might find him playing guitar, juggling, brewing beer, tramping or spending time with his young family.</p>
-                </div>
-              </div>
-            </div>
-          </div> <!-- .bio-inner -->
-        </div> <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Ewen</h3>
-      </div> <!-- .person-wrap -->
-
-      <!-- Hollingsworth -->
-      <div id="person-hollingsworth" class="person-wrap js-iso-element" data-coffees="1" data-commits="185">
-        <a href="#" class="person js-show-bio">
-          <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/no-image-ill.png" | prepend: site.baseurl }}" alt="Jonathan Hollingsworth" />
-          <span class="burst-wrap scale-in">
-            <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
-            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
-          </span>
-        </a>
-        <div class="bio-wrap">
-          <div class="bio-inner">
-            <div class="faux-table">
-              <div class="faux-table-cell">
-                <div class="bio-head">
-                  <h2 class="bio-heading">Jonathan Hollingsworth</h2>
-                  <h3 class="bio-sub">Full Stack Developer</h3>
-                  <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-hollingsworth.jpg" | prepend: site.baseurl }}" alt="Jonathan Hollingsworth" />
-                  </div>
-                </div>
-                <div class="bio-body">
-                  <p>Jonathan has over 15 years experience working as a software engineer and then as a project manager on large IT projects with some of the UKs most well known brands. The lure of the NZ lifestyle and a passion to get back into code has brought him to Media Suite to join our Node.js team. Jonathan (aka Hollingsworth) is lucky enough to have settled in Queenstown with his wife and young family where he gets to snowboard in winter and mountain bike in the summer.</p>
-                </div>
-              </div>
-            </div>
-          </div> <!-- .bio-inner -->
-        </div> <!-- .bio-wrap -->
-        <h3 class="person-name-hover">Jonathan H</h3>
       </div> <!-- .person-wrap -->
 
       <!-- Matisse -->
