--- a/src/404.html
+++ b/src/404.html
@@ -2,216 +2,19 @@
 layout: default
 title: Media Suite | 404 Page not found
 ---
-<div id="main-wrap" class="internal-page 404-page">
+<div id="main-wrap" class="internal-page nopage-page">
 
-  <div class="panel-inner max-570 clearfix">
+  <div class="panel-inner max-760 clearfix">
 
-      <h1 class="lowercase underline-orange">Careers</h1>
-
-      <div class="service-icons">
-        <a href="#current-positions" class="service-icon js-scroll-to careers">
-          <i class="icon-clipboard-01"></i>
-          <h2 class="lowercase">...even patrick can't find it</h2>
-        </a>
-      </div>
-
+      <h1 class="lowercase underline-orange">...even patrick can't find it</h1>
+      <div class="crumbs fancy-pants-font lowercase">404 Page not found</div>
   </div>
-
-
-
-    <div class="panel-inner max-760 clearfix">
-      <img src="/img/404.jpg"> 
-  </div>
-
-  <div class="panel-inner max-1200 clearfix">
-    <div id="should-will-mobile">
-      <h2 class="lowercase underline-orange">we will</h2>
-      <p>be incredibly open</p>
-      <p>prioritise learning</p>
-      <p>challenge the status quo</p>
-      <p>support you</p>
-      <p>listen</p>
-      <p>value your contribution</p>
-      <p>support flexibility</p>
-      <h2 class="lowercase underline-orange" style="margin-top:40px;">you should</h2>
-      <p>be incredibly open</p>
-      <p>bring the willingness to both learn and teach</p>
-      <p>embrace change, question everything</p>
-      <p>support your team</p>
-      <p>speak</p>
-      <p>value your team’s contribution</p>
-      <p>act to support trust and autonomy</p>
+  <div class="panel-inner max-760 clearfix">
+    <img src="/img/404.jpg" class="patrick-404"> 
+    <div class="text-404">
+      <p>Sorry, looks like we’re having trouble finding that page.</p>
+      <a href="{{ "/" | prepend: site.baseurl }}" class="drop-btn orange-bg">take me home</a>
     </div>
-    <div id="should-will">
-      <span class="should-will-title">we will</span>
-      <span class="should-will-title">you should</span>
-      <img src="../img/careers/julia.png" class="julia-overlay">
-      <div class="row">
-        <div class="cell">be incredibly open</div>
-        <div class="cell division"></div>
-        <div class="cell">be incredibly open</div>
-      </div>
-      <div class="row">
-        <div class="cell">
-          prioritise learning
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">In order to stay ahead in our ever-evolving industry we provide each member of the team with committed time and budget to advance their learning and professional development. We strive for a supportive environment that celebrates knowledge sharing, mentoring and peer review.</span>
-          </div>
-        </div>
-        <div class="cell division"></div>
-        <div class="cell">
-          bring the willingness to both learn and teach
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">You’ll need to have a genuine passion for getting better at what you do, and a willingness to share that journey with the team. </span>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="cell">
-          challenge the status quo
-        </div>
-        <div class="cell division"></div>
-        <div class="cell">
-          embrace change, question everything
-        </div>
-      </div>
-      <div class="row">
-        <div class="cell">
-          support you
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">We are always willing to hear your ideas on what we can do to support you or the team.</span>
-          </div>
-        </div>
-        <div class="cell division"></div>
-        <div class="cell">
-          support your team
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">Everyone on the team is willing to drop what they’re doing to help their peers.We expect the same from you. You’ll need to be comfortable reviewing the work of others and providing teammates with constructive feedback.</span>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="cell">
-          listen
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">This is an environment where everyone’s ideas will be debated, turned upside-down and torn apart. After that, good ideas  may just stick and great ideas will be be iterated on and become part of who we are.</span>
-          </div>
-        </div>
-        <div class="cell division"></div>
-        <div class="cell">
-          speak
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">You will need to be comfortable sharing your ideas, having them openly debated and be happy when they morph into something else entirely. Ideally, you will be fearless when putting outside-the-square ideas on the table, able to take criticism but also stand up for what you believe in and not be afraid to get behind colleague’s ideas.</span>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="cell">
-          value your contribution
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">We are pretty open about who gets paid what - and how that gets drawn from the success of the business. We’re all working together to raise team salaries alongside the performance of the business, because we favour rewarding the team as a whole over a competitive remuneration model.</span>
-          </div>
-        </div>
-        <div class="cell division"></div>
-        <div class="cell">
-          value your team’s contribution
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">Be aware that some of our team have taken pretty big pay cuts to work with us. They’re still here, and they tell us it’s been worth the compromise, so it is extra-important that there is no space to “ride the coattails”, everyone has a role to play in lifting performance to drive up team remuneration.  </span>
-          </div>
-        </div>
-      </div>
-       <div class="row">
-        <div class="cell">
-          support flexibility
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">Most of our team members have the space to work where and when they’re most productive, to best match the individual rhythms of their lives.</span>
-          </div>
-        </div>
-        <div class="cell division"></div>
-        <div class="cell">
-          act to support trust and autonomy
-          <div class="more-text-wrapper">
-            <img class="ellipsis" src="../img/careers/ellipsis.png">
-            <span class="more-text">The price of flexibility is trust. You need to be able to self-manage your time and responsibilities to be your most productive and brilliant self-  and not hold back your team or projects.</span>
-          </div>
-        </div>
-      </div>
-
-  </div>
-
-  <div class="services-wrap">
-
-
-    <!-- Analysis -->
-    <h2 class="text-size-35 max-760" style="z-index:1; margin-bottom:80px;">if you were part of the media suite team this past year, you might have</h2>
-
-    <!-- Been a teacher and student -->
-    <div id="service-design" class="service-item has-tri-image clearfix">
-      <div class="service-image tri-image careers">
-        <img src="{{ "/img/careers/careers-1.jpg" | prepend: site.baseurl }}" alt="" />
-      </div>
-      <div class="service-text">
-        <h2 class="lowercase service-heading">been teacher and student</h2>
-        <p>Attended company-wide Agile training<br>
-        Presented a topic at one of our “Learning Lunches” or local JS meetup.<br>
-        Been dispatched to conferences in Norway, Australia, New Zealand or Scotland
-        Helped run the Southern Hemisphere's first NodeJS conference.</p>
-      </div>
-    </div>
-
-    <!-- Had some fun -->
-    <div id="service-development" class="service-item image-right has-tri-image clearfix">
-      <div class="service-image tri-image careers">
-        <img src="{{ "/img/careers/careers-2.jpg" | prepend: site.baseurl }}" alt="" />
-      </div>
-      <div class="service-text">
-        <h2 class="lowercase service-heading">had some fun</h2>
-        <p>Been involved with planning one of our ‘Media Suite Hack Days’<br>
-        Eaten Yum Neua (pretty much any Wednesday)<br>
-        Escaped to the Marlborough Sounds, with quite a few beers,  for a weekend of “user testing”<br>
-        Communicated with our self-made robot who lives in our chat room; it has its own personality, gender and name (although these last two get changed frequently).</p>
-      </div>
-    </div>
-
-    <!-- Deployment -->
-    <div id="service-support" class="service-item clearfix">
-      <div class="service-image" style="margin-top:-40px;">
-        <img src="{{ "/img/careers/ewen.png" | prepend: site.baseurl }}" alt="" />
-      </div>
-      <div class="service-text">
-        <h2 class="lowercase service-heading">built meaningful things</h2>
-        <p>Contributed to a government-backed system to help plan, coordinate and collaborate on the Christchurch rebuild</p>
-        <p>Developed a range of environmental science databases which help monitor New Zealand’s natural resources
-        Worked on a range of initiatives providing commuters with tools to reduce their commute time.</p>
-      </div>
-    </div>
-  </div>
-
-  <div id="current-positions" class="other-case-studies max-760" style="margin-top:80px;">
-
-      <h1 class="lowercase">Current Positions</h1>
-
-      <div class="case-study-item clearfix">
-    <a href="{{ "/careers/javascript-node-developer" | prepend: site.baseurl }}" class="item-image">
-      <img src="{{ "/img/careers/developer-graphic.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" style="margin-top:40px;" />
-    </a>
-    <div class="item-text">
-      <div class="item-text-head">
-        <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/careers/javascript-node-developer" | prepend: site.baseurl }}">Javascript Developer</a></h2>
-        <h3 class="item-sub-heading"><a href="{{ "/careers/javascript-node-developer" | prepend: site.baseurl }}">(node.js ember.js)</a></h3><br>
-        <a href="{{ "/careers/javascript-node-developer" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
-      </div>
-    </div> <!-- .item-text -->
-
   </div>
 
 </div> <!-- #main-wrap -->
